# yafut

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: code.yml  licensing.yml
src/: copy.c  copy.h  file.c  file.h  file_driver.h  file_driver_mtd.c  file_driver_mtd.h  file_driver_posix.c  file_driver_posix.h  file_driver_yaffs.c  file_driver_yaffs.h  ioctl.c  ioctl.h  layout.c  layout.h  log.c  log.h  main.c  mtd.c  mtd.h  object.c  object.h  options.c  options.h  printer.c  printer.h  printer_driver.h  printer_driver_text.c  printer_driver_text.h  storage.c  storage.h  storage_driver.h  storage_driver_image.c  storage_driver_image.h  storage_driver_nand.c  storage_driver_nand.h  storage_driver_nor.c  storage_driver_nor.h  storage_platform.h  storage_platform_generic.c  (+14 more)
